force-app/main/default/objects/WorkOrderLineItem/fields/Approved_Transport_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Transport_Amount__c</fullName>
    <description>Approved Transport portion of the claim amount in AUD for Guided Workflow</description>
    <label>Approved Transport Amount (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>