force-app/main/default/objects/WorkOrderLineItem/fields/Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_Rate__c</fullName>
    <description>Forex Currency Conversion Rate converting currencies other than AUD</description>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>