force-app/main/default/objects/WorkOrderLineItem/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the person making the claim, either Home or Away</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>