force-app/main/default/objects/WorkOrderLineItem/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <description>Original currency of the Claim</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>