force-app/main/default/objects/WorkOrderLineItem/fields/Product_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Credit_Value__c</fullName>
    <description>QAC</description>
    <label>Product Credit Value</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>