force-app/main/default/objects/WorkOrderLineItem/fields/Total_Payable_credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_credits__c</fullName>
    <description>QAC</description>
    <formula>Quantity *  Product_Credit_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>