force-app/main/default/objects/WorkOrderLineItem/validationRules/QCC_GW_Expense_Assesment_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_GW_Expense_Assesment_Outcome</fullName>
    <active>true</active>
    <description>Expense Assessment Outcome should align with the correct Status</description>
    <errorConditionFormula>( ISPICKVAL( Status ,&apos;Approved&apos;) || ISPICKVAL( Status ,&apos;Rejected&apos;)) &amp;&amp;  
NOT(CONTAINS( TEXT(Expense_Assessment_Outcome__c) ,TEXT(Status)))</errorConditionFormula>
    <errorDisplayField>Expense_Assessment_Outcome__c</errorDisplayField>
    <errorMessage>The Expense Assessment Outcome must reflect the Status chosen.</errorMessage>
</ValidationRule>