force-app/main/default/objects/WorkOrderLineItem/validationRules/QCC_GW_Required_Receipt_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_GW_Required_Receipt_Amount</fullName>
    <active>true</active>
    <description>Make user convert the currency to AUD before actioning the WOLI</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Expense&apos; &amp;&amp; ISNULL(Receipt_Amount__c) &amp;&amp; ( ISPICKVAL(Status ,&apos;Approved&apos;) || ISPICKVAL(Status ,&apos;Rejected&apos;) )</errorConditionFormula>
    <errorDisplayField>Receipt_Amount__c</errorDisplayField>
    <errorMessage>You must convert the currency to populate the Receipt Amount before you Approve or Reject the Work Order Line Item (WOLI)</errorMessage>
</ValidationRule>